Java 1.8 backporting